资源管理权限模块前期准备工作完成

--- a/forum-admin/src/main/webapp/pages/admin-user/permission-add.html
+++ b/forum-admin/src/main/webapp/pages/admin-user/permission-add.html
@@ -144,11 +144,17 @@
         var vm = new Vue({
             el: '#app',
             data: {
-                permission: {id: 1, permissionName: '用户管理员', keyword: 'USSER_ADMIN'},
+                permission: {},
             },
 			methods:{
                 add(){
-                    alert(this.permission.permissionName)
+                   axios.post("/admin/addPermission.do", this.permission).then((res)=>{
+                       if (res.data.flag) {
+                           window.location.href = document.referrer;
+					   } else {
+                           alert(res.data.message) ;
+					   }
+				   })
                 }
 			}
 
