--- a/forum-admin/src/main/webapp/pages/admin-user/admin-user.html
+++ b/forum-admin/src/main/webapp/pages/admin-user/admin-user.html
@@ -45,7 +45,7 @@
                         <div class="input-group" style="width: 300px;height:20px;margin-left: 780px">
                             <input type="text" class="form-control" v-model="pagination.queryString" placeholder="输入管理员姓名进行查找">
                             <span class="input-group-btn">
-                                <button class="btn btn-default" type="button" @click="search">搜索</button>
+                                <button class="btn btn-default"  type="button" @click="search">搜索</button>
                             </span>
                         </div>
                     </div>
@@ -57,6 +57,7 @@
                                  <th>管理员姓名</th>
                                  <th>电话</th>
                                  <th>邮箱</th>
+                                 <th>时间</th>
                                  <th>状态</th>
                                  <th>操作</th>
                              </tr>
@@ -65,11 +66,15 @@
                                 <td>{{admin.username}}</td>
                                 <td>{{admin.mobile}}</td>
                                 <td>{{admin.email}}</td>
-                                <td>{{admin.status == 1 ? '开启':'关闭'}}</td>
+                                <td>{{admin.createTime}}</td>
+                                <td>{{admin.status == 1 ? '关闭':'开启'}}</td>
                                 <td width="240px">
                                     <a class="detail" @click="showDetail(admin.id)" >详情</a>
                                     &nbsp;&nbsp;&nbsp;&nbsp;
-                                    <a class="detail" @click="del(admin.id)" >删除</a>
+                                    <a v-if="admin.status==0" class="detail" @click="changeStatus(admin.id)" >关闭</a>
+                                    <a v-if="admin.status==1" class="detail" @click="changeStatus(admin.id)" >开启</a>
+                                    &nbsp;&nbsp;&nbsp;&nbsp;
+                                    <a  class="detail" @click="del(admin.id)" >删除</a>
                                     &nbsp;&nbsp;&nbsp;&nbsp;
                                     <a class="detail" @click="addRole(admin.id)" >添加角色</a>
                                 </td>
@@ -108,33 +113,69 @@
                           queryString:null//查询条件
                       },
                       admins:[
-                          {id:1,username:'张啊',mobile:'18832030387',email:'1198423961@qq.com',status:1},
-                          {id:2,username:'张啊',mobile:'18832030387',email:'1198423961@qq.com',status:0},
-                          {id:3,username:'张啊',mobile:'18832030387',email:'1198423961@qq.com',status:0},
-                          {id:4,username:'张啊',mobile:'18832030387',email:'1198423961@qq.com',status:1},
+                          {id:1,username:'张啊',mobile:'18832030387',email:'1198423961@qq.com',createTime:'2012-12-25 12:00:00',status:1},
+                          {id:2,username:'张啊',mobile:'18832030387',email:'1198423961@qq.com',createTime:'2012-12-25 12:00:00',status:0},
+                          {id:3,username:'张啊',mobile:'18832030387',email:'1198423961@qq.com',createTime:'2012-12-25 12:00:00',status:0},
+                          {id:4,username:'张啊',mobile:'18832030387',email:'1198423961@qq.com',createTime:'2012-12-25 12:00:00',status:1},
 
                       ]
                   }
               },
+
+              created(){
+                  this.findPage();
+              },
               methods:{
+
+                  findPage(){
+                     var param = {
+                         currentPage:this.pagination.currentPage,
+                         pageSize:this.pagination.pageSize,
+                         queryString:this.pagination.queryString
+                     }
+
+                     axios.post("/admin/findAdminUser.do", param).then((res)=>{
+                         if (res.data.flag) {
+                            this.admins = res.data.rows;
+                            this.pagination.total = res.data.total;
+                         } else {
+                             this.$message.error(res.data.message)
+                         }
+                     })
+                  },
                   // 切换页码
                   handleCurrentChange:function(currentPage) {
                       this.pagination.currentPage = currentPage;
                       this.findPage();
                   },
                   showDetail(id){
-                      window.open("article-detail.html?id="+id,'','width=800')
+                      window.open('/pages/admin-user/admin-detail.html?id='+id)
                   },
                   search(){
-                      // 按照时间进行搜索为审核的文章
-                      alert(this.pagination.queryString)
+                      this.pagination.currentPage = 1;
+                      this.findPage();
                   },
                   flush(){
-                      alert("进行刷新")
+                      this.findPage();
                   },
                   // 删除用户
                   del(id){
-                      alert("已经删除")
+                      axios.get("/admin/deleteAdminUserById.do?id="+id).then((res)=>{
+                          if (res.data.flag) {
+                              this.findPage();
+                          } else {
+                              this.$message.error(res.data.message)
+                          }
+                      })
+                  },
+                  changeStatus(id){
+                      axios.get("/admin/changeStatus.do?id="+id).then((res)=>{
+                          if (res.data.flag) {
+                              this.findPage();
+                          } else {
+                              this.$message.error(res.data.message)
+                          }
+                      })
                   },
 
                   // 为管理员开通新的账号
