--- a/forum-center/src/main/webapp/pages/protal.html
+++ b/forum-center/src/main/webapp/pages/protal.html
@@ -319,9 +319,11 @@
                   $("#demo2").empty();
                   var i = 0;
                   var str = new Array(2);
-                  str[0] = "全场战罢，詹姆斯27中14独砍全场最高的30分，在球队开局不利、进攻生涩的危急时刻,他屡次奋不顾身地直冲篮下为湖人开辟通往胜利的康庄大道。另需留意的是，算上今天的6个篮板，詹姆斯还成为了现役第四位生涯总篮板数达到9000个的球员,作为一个非内线球员,这样的成就是令人难以想象的。"
-                  str[1] = "虽然由于次节收官阶段执行不力,湖人最终未能在上半场结束时反超比分，但在次节詹姆斯自主进攻的那个阶段，你能够明显看出灰熊根本没人能够对得上他。三节后半段，湖人掀起一波反攻高潮，在经历了大半场的苦命追赶后终于成功将比分反超，而反超一球正是源自于詹姆斯的一记底角三分。"
-                  str[2] = "湖人之所以开局不利,连续背靠背客场自然是原因之一,而另一方面也是因为灰熊的外线实在太过精准,首节7次外线出手,灰熊竟无一投失，除瓦兰外,灰熊首发其余四人在首节皆有三分进账。"
+                  str[0] = "历时三个月的的筹划编码，河工程JAVA论坛简易版横空出世，其主要功能用于技术的学习向相关知识的查询,图书模块功能暂未开发，其中仍有遗留的bug需要进行修改"
+                  str[1] = "该项目使用的技术为idea2017、mysql、spring、springmvc、springsecurity、mybatis、redis、elasticsearch、dubbo、zookeeper,采用分步式架构，分为前台和后台两部分内容。" +
+                      "前台主要为用户服务，查询所需要的文章，文章发布、关注他人、发表评论等功能，后台则主要用于管理人员对系统的维护，以及用户的管理。通过SSM框架实现了分层开发，Dubbo作为RPC远程调用框架，" +
+                      "将服务层与消费层分离，实现了系统解耦;Redis作为非关系型数据库作为缓存，大大提高了系统性能；ElasticSearch作为分布式搜索引擎，加快了搜索速度!"
+                  str[2] = "前端部分主要技术为VUEJquery,BootStrap,echarts以及ElementUI框架,由于技术水平有限，一些页面存在瑕疵，有待进一步进行改进!"
                   helper(str, 0);
               },
               close(){
@@ -329,7 +331,7 @@
               },
               center(){
                   // 携带id跳转到个人中心
-                  window.location.href="/pages/user/main.html?id="+this.user.id
+                  window.location.href="/pages/user/main.html?id="+this.user.id;
               }
           }
       })
