--- a/forum-center/src/main/webapp/pages/user/myartic.html
+++ b/forum-center/src/main/webapp/pages/user/myartic.html
@@ -206,6 +206,7 @@
         var currentPage = getParam("currentPage");
 
         if (mark == null ){
+            this.mark = 1;
             this.pagination.queryString=null
             this.findPage();
         } else {
