--- a/forum-center/src/main/webapp/pages/user/mydata.html
+++ b/forum-center/src/main/webapp/pages/user/mydata.html
@@ -98,7 +98,7 @@
                  </tr>
                  <tr>
                      <th>性别</th>
-                     <td> {{user.sex==0?'女':'男'}}</td>
+                     <td> {{user.sex==0?'男':'女'}}</td>
                  </tr>
                  <tr>
                      <th>电话</th>
