--- a/forum-center/src/main/webapp/pages/user/editmydata.html
+++ b/forum-center/src/main/webapp/pages/user/editmydata.html
@@ -169,12 +169,14 @@
             axios.get('/user/getUserById.do?id='+id).then((response)=>{
                 if(response.data.flag){
                     this.user = response.data.data;
-                    this.user.sex=this.user.sex.toString();
+                    this.user.sex=this.user.sex+"";
                     if(this.user.avatarName != null){
-                        this.imageUrl = "http://"+this.prefix+"/"+this.user.avatarName;
+                        alert(this.user.avatarName)
+                        this.imageUrl = "http://q4c8e7e7f.bkt.clouddn.com/"+this.user.avatarName;
 
                     }else{
-                        this.imageUrl = "http://"+this.prefix+"/avatar5.png"
+                        alert("ahhah2")
+                        this.imageUrl = "http://q4c8e7e7f.bkt.clouddn.com/li.jpg"
                     }
 
                 }else{
@@ -186,7 +188,7 @@
 
             //文件上传成功后的钩子，response为服务端返回的值，file为当前上传的文件封装成的js对象
             handleAvatarSuccess(response, file) {
-                this.imageUrl="http://q2rcyhwpl.bkt.clouddn.com/"+response.data;
+                this.imageUrl="http://"+this.prefix+"/"+response.data;
                 this.$message({
                     message:response.message,
                     type:response.flag?"success":"error"
