--- a/forum-center/src/main/webapp/pages/user/potal.html
+++ b/forum-center/src/main/webapp/pages/user/potal.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
+
     <style type="text/css">
         * {
             margin: 0;
@@ -14,7 +15,7 @@
         }
         .content{
             position: absolute;
-            left: 0;
+            left: 0px;
             right: 0;
             top: 0;
             bottom: 0;
@@ -30,9 +31,10 @@
             color: yellow;
             font-family: "Times New Roman",Times,serif;
             text-align: center;
-            margin-left: 300px;
+            margin-left: 540px;
             margin-top: 30px;
             letter-spacing: 2px;
+            font-weight: bold;
         }
         .threeD{
                     transform-style: preserve-3d;
@@ -163,17 +165,131 @@
                         -ms-transform: rotateX(-90deg);
                     -webkit-transform: rotateX(-90deg);
                 }
- 
+
                 /*后面*/
                 .cube > div:nth-child(6) {
                             transform: rotateY(180deg);
                         -ms-transform: rotateY(180deg);
                     -webkit-transform: rotateY(180deg);
                 }
+
+        #description{
+            position: absolute;
+            color: red;
+            width: 425px;
+            height: 435px;
+            margin-top: 102px;
+            margin-left: 50px;
+            font-style: italic;
+            font-weight: bold;
+            line-height: 30px;
+
+        }
+        /*#00ff00*/
+        #description1{
+            position: absolute;
+            color: blue;
+            width: 425px;
+            height: 435px;
+            margin-top: 102px;
+            margin-left: 889px;
+            font-style: italic;
+            font-weight: bold;
+            line-height: 30px;
+
+        }
+        #d1{
+            display: none;
+            position: absolute;
+            margin-left: 61px;
+            margin-top: 13px;
+            border-radius: 50% 50% 50% 50%;
+            width: 76px;
+            height: 76px;
+            animation:  go  5s  linear  infinite
+        }
+
+        #d2{
+            display: none;
+            position: absolute;
+            margin-left: 1221px;
+            margin-top: 13px;
+            border-radius: 50% 50% 50% 50%;
+            width: 76px;
+            height: 76px;
+            animation:  go  5s  linear  infinite
+        }
+
+        #d3{
+            display: none;
+            position: absolute;
+            margin-left: 61px;
+            margin-top: 546px;
+            border-radius: 50% 50% 50% 50%;
+            width: 76px;
+            height: 76px;
+            animation:  go  5s  linear  infinite
+        }
+
+        #d4{
+            display: none;
+            position: absolute;
+            margin-left: 1221px;
+            margin-top: 546px;
+            border-radius: 50% 50% 50% 50%;
+            width: 76px;
+            height: 76px;
+            animation:  go  5s  linear  infinite
+        }
+
+        #d5{
+            display: none;
+            position: absolute;
+            margin-left: 651px;
+            margin-top: 546px;
+            border-radius: 50% 50% 50% 50%;
+            width: 76px;
+            height: 76px;
+            animation:  go  5s  linear  infinite
+        }
+
+        #singtrue{
+            position: absolute;
+            margin-left: 1170px;
+            margin-top: 450px;
+            color: #ff3300;
+            font-style: italic;
+            font-weight: bold;
+            letter-spacing: 1px;
+            display: none;
+        }
+
+        @keyframes go {
+            to {
+                transform: rotate(0deg) rotate(360deg);
+                background-color: yellow;
+            }
+        }
     </style>
 </head>
 <body>
-<div id="title">河工程JAVA论坛个人中心</div>
+<div id="description">
+
+</div>
+<div id="description1">
+</div>
+<img id="d1" src="../../img/9.png" width="100%" height="100%">
+<img id="d2" src="../../img/9.png" width="100%" height="100%">
+<img id="d3" src="../../img/9.png" width="100%" height="100%">
+<img id="d4" src="../../img/9.png" width="100%" height="100%">
+<img id="d5" src="../../img/9.png" width="100%" height="100%">
+
+<div id="singtrue">
+    <div>Liu Weidong</div>
+    <div style="margin-top: 5px">2020-06-25</div>
+</div>
+<audio src="../../img/4.mp3"  loop="1"  autoplay="autoplay" id="music"></audio>
+<div id="title">My University</div>
     <div class="content">
         <div class="threeD">
             <div class ="threeD heart">
@@ -188,34 +304,159 @@
             </div>
         </div>
     </div>
-    
-    <script type="text/javascript">
-        var heart = document.getElementsByClassName("heart")[0];
-        var n = 36;
-        var m = 360 / n;
- 
-        //获取随机颜色
-        var getRandomColor = function () {
-            return '#' + (function (color) {
-                return (color += '0123456789abcdef'[Math.floor(Math.random() * 16)]) && (color.length == 6) ? color : arguments.callee(color);
-            })('');
-        }
-        //创建n条半心形线段
-        for (var i = 0; i < n; i++) {
-            var div = document.createElement("div");
-            div.className = "rib";
-            div.style.borderColor = getRandomColor();
-            //画线
-            div.style.transform = "rotateY(" + m * i + "deg) rotateZ(45deg) translateX(30px)";  
-            heart.appendChild(div);
-        }
-        //每隔0.1秒随机上色,相比较每1秒上色，这样上色更柔和
-        setInterval(function () {
-            for (var i = 0; i < n;i++) {
-                document.getElementsByClassName('rib')[i].style.borderColor = getRandomColor();
-            }
-        }, 100)
-        
-    </script>
+
+
+
 </body>
+
+<script type="text/javascript">
+
+    //document.getElementById("d1").style.visibility="hidden";
+    var ad = document.getElementById("music");
+    ad.play();
+
+    var d1 = document.getElementById("d1");
+    var d2 = document.getElementById("d2");
+    var d3 = document.getElementById("d3");
+    var d4 = document.getElementById("d4");
+    var d5 = document.getElementById("d5");
+    setTimeout(function () {
+        fadeIn(d1,10000)
+        setTimeout(function () {
+            fadeIn(d2,20000)
+            setTimeout(function () {
+                fadeIn(d3,30000)
+                setTimeout(function () {
+                    fadeIn(d4,40000)
+                    setTimeout(function () {
+                        fadeIn(d5,50000)
+                    },50000)
+                },40000)
+            },30000)
+        },20000)
+    },10000)
+
+    var heart = document.getElementsByClassName("heart")[0];
+    var n = 36;
+    var m = 360 / n;
+    var left = "She had been shopping with her Mom in Wal-Mart. She must have been 6 years old, this beautiful brown haired, freckle-faced image of innocence. " +
+        "It was pouring outside. The kind of rain that gushes over the top of rain gutters, so much in a hurry to hit the Earth, it has no time to flow down the spout.What is Love? " +
+        "The eternal question we all carry around deep within our heart. Love is the eternal search. Love is eternal when we find it. But do we really ever find it ? When we define it do we negate it?" +
+        " When we set limits on what we believe to be love do we begin to destroy it by hoping to understand this is a doog news "
+    var right = "She had been shopping with her Mom in Wal-Mart. She must have been 6 years old, this beautiful brown haired, freckle-faced image of innocence. " +
+        "It was pouring outside. The kind of rain that gushes over the top of rain gutters, so much in a hurry to hit the Earth, it has no time to flow down the spout.What is Love? " +
+        "The eternal question we all carry around deep within our heart. Love is the eternal search. Love is eternal when we find it. But do we really ever find it ? When we define it do we negate it?" +
+        " When we set limits on what we believe to be love do we begin to destroy it by hoping to understand "
+    var left1 = "She had been shopping with her Mom in Wal-Mart. She must have been 6 years old, this beautiful brown haired, freckle-faced image of innocence. " +
+        "It was pouring outside. The kind of rain that gushes over the top of rain gutters, so much in a hurry to hit the Earth, it has no time to flow down the spout.What is Love? " +
+        "The eternal question we all carry around deep within our heart. Love is the eternal search. Love is eternal when we find it. But do we really ever find it ? When we define it do we negate it?" +
+        " When we set limits on what we believe to be love do we begin to destroy it by hoping to understand this is a doog news "
+    var right2 ="I take exercise every day. It makes feels good and helps me to become taller. My favorite sport is football and I want to be a football player in the future. I play football with my friends every week. It is such a great time for me. My friends and I always do the great team work and we beat other teams."
+    var length = left.length;
+    var r2 = right.length;
+    var r3 = left1.length;
+    var r4 = right2.length;
+    var d = 0 ;
+    var c = 0;
+
+    function fadeIn(el,time){
+        if(el.style.opacity === ""){
+            el.style.opacity = 0;
+        }
+        if(el.style.display === "" || el.style.display === 'none'){
+            el.style.display = 'block';
+        }
+
+        var t = setInterval(function(){
+            if(el.style.opacity < 1){
+                el.style.opacity = parseFloat(el.style.opacity)+0.01;
+            }
+            else{
+                clearInterval(t);
+            }
+        },time/100);
+    }
+
+    var singer = document.getElementById('singtrue');
+     var task = setInterval(function () {
+
+         var str = left.substring(0,c++);
+         document.getElementById("description").textContent=str;
+         if ( c == length ) {
+             c = 0;
+             clearInterval(task);
+             var task2 = setInterval(function () {
+
+                 var str = right.substring(0,d++);
+                 document.getElementById("description1").textContent=str;
+                 if ( d == r2 ) {
+                     clearInterval(task2);
+                     document.getElementById("description").style.color='#00ff00';
+                     var task3 = setInterval(function () {
+                         var str = left1.substring(0,c++);
+                         document.getElementById("description").textContent=str;
+                         if (c == r3){
+                             clearInterval(task3);
+                             c = 0;
+
+                             document.getElementById("description1").style.color='yellow';
+                             var task4 = setInterval(function () {
+                                 var str = right2.substring(0,c++);
+                                 document.getElementById("description1").textContent=str;
+                                 if (c == r4){
+                                     clearInterval(task4);
+                                     fadeIn(singer,2000)
+                                     c = 0;
+                                 }
+                             },50)
+                         }
+                     },50)
+                 }
+             },50)
+         }
+    },50);
+
+
+
+
+
+
+    //获取随机颜色
+    var getRandomColor = function () {
+        return '#' + (function (color) {
+            return (color += '0123456789abcdef'[Math.floor(Math.random() * 16)]) && (color.length == 6) ? color : arguments.callee(color);
+        })('');
+    }
+    //创建n条半心形线段
+  /*  for (var i = 0; i < n; i++) {
+        var div = document.createElement("div");
+        div.className = "rib";
+        div.style.borderColor = getRandomColor();
+        //画线
+        div.style.transform = "rotateY(" + m * i + "deg) rotateZ(45deg) translateX(30px)";
+        heart.appendChild(div);
+    }*/
+
+    var s = 0;
+    var task5  = setInterval(function () {
+        var div = document.createElement("div");
+        div.className = "rib";
+        div.style.borderColor = getRandomColor();
+        //画线
+        div.style.transform = "rotateY(" + m * s + "deg) rotateZ(45deg) translateX(30px)";
+        heart.appendChild(div);
+        s = s + 1;
+        if ( s == n) {
+            clearInterval(task5);
+        }
+
+    },5000)
+
+    //每隔0.1秒随机上色,相比较每1秒上色，这样上色更柔和
+    setInterval(function () {
+        for (var i = 0; i < n;i++) {
+            document.getElementsByClassName('rib')[i].style.borderColor = getRandomColor();
+        }
+    }, 100)
+</script>
 </html>
